--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.28.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "jquery": "1.9.1",
     "popper.js": "^1.16.1",
